--- a/fromvalidation/android/app/src/main/AndroidManifest.xml
+++ b/fromvalidation/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.fromvalidation">
    <application
+        android:requestLegacyExternalStorage="true"
         android:label="fromvalidation"
         android:icon="@mipmap/ic_launcher">
         <activity
