--- a/fromvalidation/pubspec.yaml
+++ b/fromvalidation/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   rxdart: ^0.27.1
   http:
+  image_picker: ^0.8.1+1
 
 dev_dependencies:
   flutter_test:
